# vulkan-sandbox

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
Resources/Meshes/: StanfordDragon_License.txt
Resources/Textures/: Missing_Raw.tga
Source/: Camera.cpp  Camera.hpp  Device.cpp  Device.hpp  Main.cpp  Model.cpp  Model.hpp  Tga.cpp  Tga.hpp  Utility.hpp  pch.hpp
Source/Shaders/: Skybox.frag  Skybox.vert  Texture.frag  Texture.vert
src/: main.cpp  utility.hpp
